--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ black = "^23.3.0"
 pylint = "^2.17.4"
 aiohttp = "^3.8.4"
 beautifulsoup4 = "^4.12.2"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
