--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pylint = "^2.17.4"
 aiohttp = "^3.8.4"
 beautifulsoup4 = "^4.12.2"
 python-dotenv = "^1.0.0"
+aiofiles = "^23.1.0"
 
 
 [build-system]
